Changes for Type modal title

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -63,11 +63,11 @@
                 {% endfor %}
                 {% if api.types is not empty %}
                     {% for type in api.types %}
-                        <div class="modal fade" id="{{ type.name }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                        <div class="modal fade" id="{{ type.name }}" tabindex="-1" role="dialog" aria-labelledby="{{ type.name }}Title" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLongTitle">{{ type.name }}</h5>
+                                        <h5 class="modal-title" id="{{ type.name }}Title">{{ type.name }}</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
