--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -1,7 +1,7 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
     {% set sectionId = resource.displayName|replace({' ': '-'})|lower %}
     <div class="sticky px-3">
-        <div class="border-bottom border-top py-3 pb-4">
+        <div class="border-bottom border-top py-1">
             <h4 id="{{ sectionId }}" class="heading text-gray mr-4">{{ resource.uri }}</h4>
             <ul class="list-unstyled d-inline-flex mb-0">
                 {% for method in resource.methods %}
