--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -22,7 +22,7 @@
 
             {% include theme ~ "/method-query-parameters.html.twig" %}
 
-            {% include theme ~ "/method-responses.html.twig" %}
+            {% include theme ~ "/method-possible-responses.html.twig" %}
 
             {% include theme ~ "/types.html.twig" %}
         </div>
