Fixed Spyscroll on Firefox and Safari

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -105,5 +105,6 @@
     hljs.initHighlightingOnLoad();
 </script>
 <script src="assets/js/custom.js"></script>
+<script src="assets/js/toc.js"></script>
 </body>
 </html>
