--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -2,7 +2,7 @@
     {% set sectionId = resource.displayName|replace({' ': '-'})|lower %}
     <div class="sticky px-3">
         <div class="sticky__body border-bottom border-top py-1 ">
-            <h4 id="{{ sectionId }}" class="heading text-gray mr-4">{{ resource.uri }}</h4>
+            <h4 id="{{ sectionId }}" class="heading text-gray">{{ resource.uri }}</h4>
             <ul class="list-unstyled d-inline-flex mb-0">
                 {% for method in resource.methods %}
                     <li class="{{ loop.index > 1 ? 'px-3' : 'pr-3' }} ">
