Mobile menu improvements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,6 +328,9 @@ h5[data-field="name"]:before,
 }
 
 @media (max-width: 991px) {
+    .sidebar__header {
+        padding-right: 15px;
+    }
     .sidebar-menu {
         display: none;
         z-index: 1032;
@@ -355,7 +358,6 @@ h5[data-field="name"]:before,
 .mobile-menu-expanded .sidebar-menu {
     display: block;
 }
-
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
