Added overflow-x: scroll for hljs blocks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,9 @@ h5[data-field="name"]:before,
     #search-results {
         top: 100px;
     }
+    .hljs {
+        overflow-x: scroll;
+    }
 }
 
 @media (min-width: 992px) {
