Added response tabs

--- a/raml2html/themes/default/example.html.twig
+++ b/raml2html/themes/default/example.html.twig
@@ -1,14 +1,13 @@
-<div class="example position-relative border p-3 mb-3">
-    <p class="mb-0 font-weight-medium">{{ mediaType }}</p>
-    <p class="mb-0 icon icon--copy-clipboard">
-        <i class="material-icons-outlined clipboard"
-           data-toggle="tooltip"
-           data-placement="top"
-           data-clipboard-target="#{{ clipboardId }}"
-           title="Copy to clipboard">file_copy
-        </i>
-    </p>
-    <pre id="{{ clipboardId }}" class="border-top">
-        <code class="{{ mediaType }}">{{ example }}</code>
-    </pre>
-</div>
+{#<div class="tab-pane fade" id="{{ tabId1 }}" role="tabpanel">#}
+{#    <p class="mb-0 icon icon--copy-clipboard">#}
+{#        <i class="material-icons-outlined clipboard"#}
+{#           data-toggle="tooltip"#}
+{#           data-placement="top"#}
+{#           data-clipboard-target="#{{ clipboardId }}"#}
+{#           title="Copy to clipboard">file_copy#}
+{#        </i>#}
+{#    </p>#}
+{#    <pre id="{{ clipboardId }}" class="">#}
+{#        <code class="{{ mediaType }}">{{ example }}</code>#}
+{#    </pre>#}
+{#</div>#}
