--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -12,7 +12,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <title>{{ api.title }}</title>
 </head>
-<body data-spy="scroll" data-target="#toc">
+<body>
 <div class="dropdown dropdown--menu">
     <a class="page-title text-orange btn dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         {{ api.title }}
@@ -107,7 +107,7 @@
     $('[data-toggle="tooltip"]').tooltip();
     hljs.initHighlightingOnLoad();
 </script>
-<script src="assets/js/custom.js"></script>
 <script src="assets/js/toc.js"></script>
+<script src="assets/js/custom.js"></script>
 </body>
 </html>
