--- a/raml2html/themes/default/resource-response-content.html.twig
+++ b/raml2html/themes/default/resource-response-content.html.twig
@@ -1,32 +1,66 @@
 <div class="response">
     {% for response in method.responses %}
         {% if response.headers or response.bodies %}
-            <h6 class="heading text-gray border-bottom pb-2">Responses</h6>
-            {% if response.headers %}
-                <ul class="collection with-header">
-                    <li class="collection-item">
-                        <ul class="browser-default">
-                            {% for item in response.headers %}
-                                {% include theme ~ "/named-parameter.html.twig" %}
-                            {% endfor %}
-                        </ul>
-                    </li>
-                </ul>
-            {% endif %}
             {% if response.bodies %}
-                <div class="pb-3">
-                    <p id="{{ sectionId }}_{{ method.type|lower }}_response_{{ response.statusCode }}" class="response__code">
-                        <code>Code: {{ response.statusCode }}</code>
-                    </p>
-                    {% for b in response.bodies %}
-                        {% if b.examples %}
-                            {% for example in b.examples %}
-                                {% set mediaType = schema_format(b.mediaType) %}
-                                {% set clipboardId = mediaType ~ '_' ~ uuid() %}
-                                {% include theme ~ "/example.html.twig" %}
-                            {% endfor %}
+                {% set tabId = method_name_id(sectionId ~ '-' ~ method.type|lower ~ '-response-' ~ response.statusCode) %}
+                <div class="pb-3 response__code" id="{{ tabId }}">
+                    <div class="d-flex justify-content-between align-items-baseline">
+                        <ul class="nav nav-tabs border-bottom-0" id="{{ tabId }}Tab" role="tablist">
+                            {% set tabItems = response_tabs(response.bodies) %}
+                            {% if tabItems|length > 0 %}
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link disabled">Responses</a>
+                                </li>
+                                {% for item in tabItems %}
+                                    {% set itemId = tabId ~ '-' ~ item %}
+
+                                    <li class="nav-item">
+                                        <a class="nav-link {{ loop.index == 1 ? 'active' : '' }} text-gray" id="{{ itemId }}-tab"
+                                           data-toggle="tab"
+                                           href="#{{ itemId }}"
+                                           role="tab"
+                                           aria-controls="{{ itemId }}"
+                                           aria-selected="{{ loop.index == 1 ? 'true' : 'false' }}">
+                                            {{ item }}
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            {% endif %}
+                        </ul>
+                        {% if tabItems|length > 0 %}
+                            <div>
+                                <code>Code: {{ response.statusCode }}</code>
+                            </div>
                         {% endif %}
-                    {% endfor %}
+                    </div>
+                    {% set examples = response_examples(response.bodies) %}
+                    {% if examples|length > 0 %}
+                        <div class="example position-relative border p-3 mb-3">
+                            <div class="tab-content" id="{{ tabId }}Content">
+                                {% for type, example in examples %}
+                                <div class="tab-pane fade {{ loop.index == 1 ? 'show active' : '' }}" id="{{ tabId ~ '-' ~ type }}" role="tabpanel"
+                                     aria-labelledby="{{ tabId ~ '-' ~ type }}-tab">
+                                    {% for body in example %}
+                                        <div class="position-relative">
+                                            {% set clipboardId = type ~ '_' ~ uuid() %}
+                                            <p class="mb-0 icon icon--copy-clipboard">
+                                                <i class="material-icons-outlined clipboard"
+                                                   data-toggle="tooltip"
+                                                   data-placement="top"
+                                                   data-clipboard-target="#{{ clipboardId }}"
+                                                   title="Copy to clipboard">file_copy
+                                                </i>
+                                            </p>
+                                            <pre id="{{ clipboardId }}" class="">
+                                        <code class="{{ type }}">{{ body }}</code>
+                                        </div>
+                                    </pre>
+                                    {% endfor %}
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
                 </div>
             {% endif %}
         {% endif %}
