--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -19,8 +19,8 @@
         {{ api.title }}
     </a>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="https://doc.ezplatform.com/">eZ Platform Developer Documentation</a>
-        <a class="dropdown-item" href="https://doc.ezplatform.com/projects/userguide">eZ Platform User Documentation</a>
+        <a class="dropdown-item" href="https://doc.ezplatform.com/">Ibexa Developer Documentation</a>
+        <a class="dropdown-item" href="https://doc.ezplatform.com/projects/userguide">Ibexa User Documentation</a>
     </div>
 </div>
 <header class="header fixed-top background--gray">
