Update after review

--- a/raml2html/themes/default/type.html.twig
+++ b/raml2html/themes/default/type.html.twig
@@ -4,7 +4,7 @@
     <span class="red-text">*</span>
 {% endif %}
 
-(<span class="type-type">
+(<span class="font-italic">
     {%- if type is array type %}
         {{- type.items.name -}}[]
     {% else %}
